name:                ghcjs-websockets
version:             0.1.0.0
synopsis:            GHCJS interface for the Javascript Websocket API
-- description:         
homepage:            http://github.com/mstksg/ghcjs-websockets
license:             MIT
license-file:        LICENSE
author:              Justin Le
maintainer:          justin@jle.im
-- copyright:           
category:            Web
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

source-repository head
  type:     git
  location: https://github.com/mstksg/tagged-binary

library
  exposed-modules:     JavaScript.WebSockets
  -- ghcjs-options: -O2
  -- other-modules:       
  -- other-extensions:    
  ghc-options: -Wall
  build-depends:     base ==4.7.*,
                     ghcjs-base,
                     transformers,
                     tagged-binary,
                     binary,
                     spoon,
                     containers,
                     bytestring,
                     text
  -- hs-source-dirs:      
  default-language:    Haskell2010

executable ghcjs-websockets-test
  main-is: Test/Tests.hs
  ghc-options:       -O2
                     -Wall
  default-language:  Haskell2010
  build-depends:     base ==4.7.*,
                     spoon,
                     binary,
                     bytestring,
                     tagged-binary,
                     containers,
                     ghcjs-base,
                     transformers,
                     text
